  FilteredTablePanel.scrollToSelectedItem field added
  AbstractFilteredTableModel.removeItems(from, to) now fires a tableRowDeleted event
  Util.LINE_SEPARATOR added, used throughout
  UiUtil.getFileDataFlavor() added
  UiUtil.isFileDataFlavor() added
  EntityImpl.getDoubleValue() bug fixed, it did not handle null values correctly
  DoubleValueLink and IntValueLink, bug fixed, ThreadLocal format objects were instance variables
  EntityEditPanel.createDateInputPanel() now uses the property date format by default, instead of the default date format
  DefaultEntityEditModel.initializeEntityComboBoxModel() no longer refreshes the combo box model
  EntityUiUtil.createEntityComboBox() now refreshes the combo box model
  EntityApplicationPanel, some minor refactoring
  ValueChangeEvent.getNew/OldValue() generified
  FilteredComboBoxModel.getSelectedValue() added
  EntityComboBoxModel.getSelectedEntity() removed, the above covers it quite nicely
  ItemComboBoxModel now extends DefaultFilteredComboBoxModel instead of DefaultComboBoxModel
  CombBoxValueLink slightly modified to accommodate the above
  DefaultFilteredComboBoxModel.isNullValueSelected() now regards an empty string to be null
  Entity.clearPrimaryKeyValues() added
  EntityTablePanel, added column info tooltips to entity popup menu
  EntityTableModel.removeItemsOnDelete field added
  EntityEditPanel.createControlPanel() and createControlToolBar() now return null if no controls are defined
  ValueLinkValidators, some refactoring
  EntityTableModel.getSelectionDependencies() removed
  EntityEditPanel, controlKeys constructor parameter handled better
  DatabaseConnectionImpl, EntityConnectionImpl, some refactoring
  EntityGeneratorModel, setColumnHasDefaultValue() moved above setNullable() since the latter returns Property instead of Property.ColumnProperty
  Sonar based fixes
  Item, removed unnecessary type parameter
  Sonar based cleanup
  PropertiesTest added