@@ -24,7 +24,18 @@
     </encoder>
   </appender>
 
+  <!--<appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">-->
+    <!--&lt;!&ndash; encoders are assigned the type-->
+         <!--ch.qos.logback.classic.encoder.PatternLayoutEncoder by default &ndash;&gt;-->
+    <!--<encoder>-->
+      <!--<pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>-->
+    <!--</encoder>-->
+  <!--</appender>-->
+
   <root level="ERROR">
     <appender-ref ref="FILE" />
   </root>
+  <!--<root level="DEBUG">-->
+    <!--<appender-ref ref="STDOUT" />-->
+  <!--</root>-->
 </configuration>
